--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.4.1",
     "morgan": "~1.9.1",
-    "request": "^2.88.0"
+    "puppeteer": "^2.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
